--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -43,7 +43,7 @@ set-option -g status-position top
 # Go to next session instead of exiting tmux
 set-option -g detach-on-destroy off
 
-source ~/.config/tmux/one-monokai.tmux
+source-file ~/.config/tmux/one-monokai.tmux
 
 # tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
