--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,6 +2,8 @@ set -g default-terminal "screen-256color"
 set-option -g default-shell $SHELL
 set-option -g default-command $SHELL
 
+set-option -s status-interval 1
+
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
