--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -25,7 +25,7 @@ bind -r k resize-pane -U 5
 bind -r o resize-pane -Z
 
 unbind Space
-bind Space popup -E /bin/zsh -i -c 'echo "Select workspace"; tmux-session'
+bind Space popup -E /bin/zsh -dfic 'echo "Select workspace"; source "$HOME/.config/zsh/tmux-session.zsh"; tmux-session'
 
 set -g mouse on
 
