--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -27,6 +27,9 @@ bind -r o resize-pane -Z
 unbind Space
 bind Space popup -E /bin/zsh -dfic 'echo "Select workspace"; source "$HOME/.config/zsh/tmux-session.zsh"; tmux-session'
 
+unbind ';'
+bind ';' popup -E /bin/zsh -dfic 'nvim ~/Notes/main.md'
+
 set -g mouse on
 
 set-window-option -g mode-keys vi
