--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -28,7 +28,7 @@ unbind Space
 bind Space popup -E /bin/zsh -dfic 'echo "Select workspace"; source "$HOME/.config/zsh/tmux-session.zsh"; tmux-session'
 
 unbind ';'
-bind ';' popup -E /bin/zsh -dfic 'nvim -u ~/.config/nvim/popup.lua ~/Notes/main.md'
+bind ';' popup -E 'nvim -u ~/.config/nvim/popup.lua ~/Notes/main.md'
 
 set -g mouse on
 
