--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -30,6 +30,11 @@ bind Space popup -E /bin/zsh -dfic 'echo "Select workspace"; source "$HOME/.conf
 unbind ';'
 bind ';' popup -E /bin/zsh -dfic 'nvim -u ~/.config/nvim/popup.lua ~/Notes/main.md'
 
+unbind 'g'
+bind 'g' run "tmux set-buffer $(cat ~/.git-credentials | awk -F'[/:@]' '{print $4}')\r"\; paste-buffer\;\
+         run "tmux set-buffer $(cat ~/.git-credentials | awk -F'[/:@]' '{print $5}')\r"\; paste-buffer\;\
+         run "tmux set-buffer ''"
+
 set -g mouse on
 
 set-window-option -g mode-keys vi
