--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,28 +1,45 @@
-font_size 16 
-
-font_family      Jetbrains Mono Medium
-bold_font        Jetbrains Mono Bold
-italic_font      Jetbrains Mono Italic
+font_size 16
+font_family Jetbrains Mono Medium
+bold_font Jetbrains Mono Bold
+italic_font Jetbrains Mono Italic
 bold_italic_font Jetbrains Mono Bold Italic
-
 symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E6AA,U+E700-U+E7C5,U+EA60-U+EBEB,U+F000-U+F2E0,U+F300-U+F32F,U+F400-U+F4A9,U+F500-U+F8FF,U+F0001-U+F1AF0 Symbols Nerd Font Mono
-
-foreground #979eab
-background #282c34
-
-color0 #282c34
-color1 #e06c75
-color2 #98c379
-color3 #e5c07b
-color4 #61afef
-color5 #be5046
-color6 #56b6c2
-color7 #979eab
-color8 #393e48
-color9 #d19a66
-color10 #56b6c2
-color11 #e5c07b
-color12 #61afef
-color13 #be5046
-color14 #56b6c2
-color15 #abb2bf
+foreground #cdd6f4
+background #1e1e2e
+selection_foreground #1e1e2e
+selection_background #f5e0dc
+cursor #f5e0dc
+cursor_text_color #1e1e2e
+url_color #f5e0dc
+active_border_color #b4befe
+inactive_border_color #6c7086
+bell_border_color #f9e2af
+wayland_titlebar_color #1e1e2e
+macos_titlebar_color #1e1e2e
+active_tab_foreground #11111b
+active_tab_background #cba6f7
+inactive_tab_foreground #cdd6f4
+inactive_tab_background #181825
+tab_bar_background #11111b
+mark1_foreground #1e1e2e
+mark1_background #cba6f7
+mark2_foreground #1e1e2e
+mark2_background #cba6f7
+mark3_foreground #1e1e2e
+mark3_background #74c7ec
+color0 #45475a
+color8 #585b70
+color1 #f38ba8
+color9 #f38ba8
+color2 #a6e3a1
+color10 #a6e3a1
+color3 #f9e2af
+color11 #f9e2af
+color4 #89b4fa
+color12 #89b4fa
+color5 #f5c2e7
+color13 #f5c2e7
+color6 #94e2d5
+color14 #94e2d5
+color7 #bac2de
+color15 #a6adc8
