--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -17,7 +17,7 @@ unbind h
 bind h split-window -v
 
 unbind r
-bind r source-file ~/.config/tmux/tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf; display "Config reloaded!"
 
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
@@ -48,7 +48,7 @@ set-option -g status-position top
 # Go to next session instead of exiting tmux
 set-option -g detach-on-destroy off
 
-source-file ~/.config/tmux/one-monokai.tmux
+source-file ~/.config/tmux/catpuccin.tmux
 
 # tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
