--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,16 +19,18 @@ bind h split-window -v
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
+bind -r C-h resize-pane -L 5
+bind -r C-j resize-pane -D 5
+bind -r C-k resize-pane -U 5
+bind -r C-l resize-pane -R 5
 
-bind -r o resize-pane -Z
+bind o resize-pane -Z
 
 unbind Space
-bind Space popup -E /bin/zsh -dfic 'echo "Select workspace"; source "$HOME/.config/zsh/tmux-session.zsh"; tmux-session'
+bind Space popup -h 10 -BE 'source ~/.config/sh/tmux-session.sh; tmux_session'
 
 unbind ';'
-bind ';' popup -E /bin/zsh -dfic 'nvim -u ~/.config/nvim/popup.lua ~/Notes/main.md'
+bind ';' popup -E 'nvim -u ~/.config/nvim/popup.lua ~/Notes/main.md'
 
 unbind 'g'
 bind 'g' run "tmux set-buffer $(cat ~/.git-credentials | awk -F'[/:@]' '{print $4}')\r"\; paste-buffer\;\
