--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.config/colors/colors.json
+.config/colors/colors.sh
+.config/nvim/lua/user/colors.lua
+
 # Codesniffer.conf
 # TODO move file somewhere else
 .composer/vendor/*
