--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,6 @@
 set -g default-terminal "screen-256color"
-set-option -g default-shell $SHELL
-set-option -g default-command $SHELL
+set-option -g default-shell "nu"
+set-option -g default-command "nu"
 
 set-option -s status-interval 1
 
