--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 set-option -g default-shell "nu"
 set-option -g default-command "nu"
 
