--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,6 +3,7 @@ set-option -g default-shell "nu"
 set-option -g default-command "nu"
 
 set-option -s status-interval 1
+set-option display-time 5000
 
 set -g prefix C-a
 unbind C-b
@@ -30,7 +31,10 @@ unbind Space
 bind Space popup -h 10 -BE 'source ~/.config/sh/tmux-session.sh; tmux_session'
 
 unbind ';'
-bind ';' popup -E 'nvim -u ~/.config/nvim/popup.lua ~/Notes/main.md'
+bind ';' popup -E 'nvim -u ~/.config/nvim/popup.lua -S ~/Notes/Session.vim'
+
+unbind 'a'
+bind 'a' popup -E '~/.config/tmux/attach-popup.sh'
 
 unbind 'g'
 bind 'g' run "tmux set-buffer $(cat ~/.git-credentials | awk -F'[/:@]' '{print $4}')\r"\; paste-buffer\;\
