--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -41,6 +41,9 @@ bind 'g' run "tmux set-buffer $(cat ~/.git-credentials | awk -F'[/:@]' '{print $
          run "tmux set-buffer $(cat ~/.git-credentials | awk -F'[/:@]' '{print $5}')\r"\; paste-buffer\;\
          run "tmux set-buffer ''"
 
+unbind 'l'
+bind 'l' popup -E 'tmux attach -t _wp'
+
 set -g mouse on
 
 set-window-option -g mode-keys vi
