--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -27,6 +27,8 @@ bind -r C-l resize-pane -R 5
 
 bind o resize-pane -Z
 
+bind-key S swap-window -t 0
+
 unbind Space
 bind Space popup -h 10 -BE 'source ~/.config/sh/tmux-session.sh; tmux_session'
 
