--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -32,6 +32,9 @@ bind-key S swap-window -t 0
 unbind Space
 bind Space popup -h 10 -BE 'source ~/.config/sh/tmux-session.sh; tmux_session'
 
+unbind C-n
+bind C-n popup -h 10 -BE 'dir=$(find . -type d | fzf); tmux new-window -c $dir -n $(basename "$dir")'
+
 unbind ';'
 bind ';' popup -E 'nvim -u ~/.config/nvim/popup.lua -S ~/Notes/Session.vim'
 
