--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -25,7 +25,7 @@ bind -r C-j resize-pane -D 5
 bind -r C-k resize-pane -U 5
 bind -r C-l resize-pane -R 5
 
-bind o resize-pane -Z
+bind z resize-pane -Z
 
 bind-key S swap-window -t 0
 
@@ -67,6 +67,9 @@ set-option -g status-position top
 # Go to next session instead of exiting tmux
 set-option -g detach-on-destroy off
 
+set -g @fzf-url-bind 'o'
+set -g @fzf-url-fzf-options '-w 50% -h 10 --multi'
+
 source-file ~/.config/tmux/catpuccin.tmux
 
 # tpm plugin
@@ -76,6 +79,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+set -g @plugin 'wfxr/tmux-fzf-url'
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
