Couple small improvements

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -33,7 +33,7 @@ unbind Space
 bind Space popup -h 10 -BE 'source ~/.config/sh/tmux-session.sh; tmux_session'
 
 unbind C-n
-bind C-n popup -h 10 -BE 'dir=$(find . -type d | fzf); tmux new-window -c $dir -n $(basename "$dir")'
+bind C-n popup -h 10 -BE '~/.config/sh/submodule.sh'
 
 unbind ';'
 bind ';' popup -E 'nvim -u ~/.config/nvim/popup.lua -S ~/Notes/Session.vim'
