--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -35,6 +35,9 @@ bind Space popup -h 10 -BE 'source ~/.config/sh/tmux-session.sh; tmux_session'
 unbind C-n
 bind C-n popup -h 10 -BE '~/.config/sh/submodule.sh'
 
+unbind C-s
+bind C-s run "tmux new-window ~/.config/sh/ssh.sh"
+
 unbind ';'
 bind ';' popup -E 'nvim -u ~/.config/nvim/popup.lua -S ~/Notes/Session.vim'
 
@@ -43,6 +46,7 @@ bind 'a' popup -E '~/.config/tmux/attach-popup.sh'
 
 unbind 'g'
 bind 'g' run "tmux set-buffer $(cat ~/.git-credentials | awk -F'[/:@]' '{print $4}')\r"\; paste-buffer\;\
+         run "sleep 0.2"\;\
          run "tmux set-buffer $(cat ~/.git-credentials | awk -F'[/:@]' '{print $5}')\r"\; paste-buffer\;\
          run "tmux set-buffer ''"
 
@@ -66,6 +70,9 @@ set-option -g status-position top
 
 # Go to next session instead of exiting tmux
 set-option -g detach-on-destroy off
+
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 set -g @fzf-url-bind 'o'
 set -g @fzf-url-fzf-options '-w 50% -h 10 --multi'
